terraform-modules-app/infra-app/ec2.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

resource "aws_security_group" "default_sg" {
  name        = "${var.env}-terraform_sg"
  description = "allow ssh and http traffic"
  vpc_id      = data.aws_vpc.default.id


  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform_sq_tag"
  }
}

resource "aws_key_pair" "my_key" {
  key_name   = "${var.env}-terraform-keypair"
  public_key = file("~/.ssh/id_ed25519.pub")
}

resource "aws_instance" "my_instance" {
  count = var.instance_count 
  depends_on = [ aws_security_group.default_sg ]
  ami                         = var.ec2_ami_id
  instance_type               = var.ec2_instance_type
  subnet_id                   = element(data.aws_subnets.default.ids, 0)
  vpc_security_group_ids      = [aws_security_group.default_sg.id]
  key_name                    = aws_key_pair.my_key.key_name

  root_block_device {
    volume_size = var.env == "prod" ? var.ec2_root_storage_size : 10
    volume_type = "gp3"
  }

  tags = {
    Name = "${var.env}-${var.ec2_instance_type}"
    Enviornment = var.env
  }
}
